# TestTask

./: CMakeLists.txt  Doxyfile  README.md
src/: main.cpp
src/Figure/: figure.cpp  figure.h
src/Figure/Point/: point.cpp  point.h
src/FigureFrame/: figureframe.cpp  figureframe.h
src/Interface/: mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: figuretest.cpp
